se agregaron estilos a la card e imagen aplicando before

--- a/order-summary-component-main/index.html
+++ b/order-summary-component-main/index.html
@@ -15,22 +15,21 @@
   <section class="card">
     <div class="card__text">
       <h2 class="card__tittle">Order Summary</h2>
-      <p class="card__paragraph">You can now listen to millions of songs, audiobooks, and podcasts on any 
-        device anywhere you like!</p>
+      <p class="card__paragraph">You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you like!</p>
 
-        <article class="card__plan">
-          <img src="./images/icon-music.svg" class="card__icon" alt="Icono de música">
-          <div class="card__info">
-            <h3 class="card__name">Annual Plan</h3>
-            <p class="card__price">$59.99/year</p>
-            <a href="" class="card__price">Change</a>
-          </div>
-        </article>
+      <article class="card__plan">
+        <img src="./images/icon-music.svg" class="card__icon" alt="Icono de música">
+        <div class="card__info">
+          <h3 class="card__name">Annual Plan</h3>
+          <p class="card__price">$59.99/year</p>
+          <a href="" class="card__price">Change</a>
+        </div>
+      </article>
 
         <a class="card__cta" href="Proceed to Payment"></a>
         <a class="card__cta" href="Cancel Order"></a>
     </div>
   </section>
-  
+
 </body>
 </html>
