se agregaron estilos a textos, botones y seccion de plan anual, mobile first

--- a/order-summary-component-main/index.html
+++ b/order-summary-component-main/index.html
@@ -22,12 +22,12 @@
         <div class="card__info">
           <h3 class="card__name">Annual Plan</h3>
           <p class="card__price">$59.99/year</p>
-          <a href="" class="card__price">Change</a>
         </div>
+        <a href="" class="card__change">Change</a>
       </article>
 
-        <a class="card__cta" href="Proceed to Payment"></a>
-        <a class="card__cta" href="Cancel Order"></a>
+        <a class="card__cta" href="">Proceed to Payment</a>
+        <a class="card__cta card__cta--gray" href="">Cancel Order</a>
     </div>
   </section>
 
